--- a/CerticamaraVehiculo-web/pom.xml
+++ b/CerticamaraVehiculo-web/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.1.3</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
